--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 
 <body style="margin: 0;">
+  <div style="font-size: 40px; position: absolute; z-index: 1;" id="bulletCount"></div>
   <div id="background"
-    style="width: 1920px; height: 1080px; background-size: cover; background-image: url('./images//mountains.png');">
-    <canvas id="myCanvas" width="1920" height="1080" style="border: 1px solid black;"></canvas>
+  style="width: 1920px; position: relative; height: 1080px; background-size: cover; background-image: url('./images//mountains.png');">
+  <canvas id="myCanvas" width="1920" height="1080" style="border: 1px solid black;"></canvas>
   </div>
   <script src="./dist/bundle.js"></script>
 </body>
