add sound and interface services, rewrite on observer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body style="margin: 0;">
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; height: 100%; position: absolute; z-index: 1; background-color: white;" id="startGameScreen"><button id="startGameButton">start game</button></div>
   <div style="font-size: 40px; position: absolute; z-index: 1;" id="bulletCount"></div>
   <div id="background"
   style="width: 1920px; position: relative; height: 1080px; background-size: cover; background-image: url('./images//mountains.png');">
